# crewAI_pdf_summarizer_

./: .gitignore  README.md  agents.py  main.py  pyproject.toml  tasks.py
articles/: test-1.md  test-2.md
config/: agents.yaml  tasks.yaml
db/: chroma.sqlite3
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat  docx2txt  dul-receive-pack  dul-upload-pack  dumppdf.py  jp.py  jsondiff  jsonpatch  jsonpointer  pdf2txt.py
tools/: browser_tools.py  search_tools.py
