[tool.poetry]
name = "pdf_summarizer"
version = "0.1.0"
description = "pdf_summarizer using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.35.8" }

[tool.poetry.scripts]
pdf_summarizer = "pdf_summarizer.main:run"
train = "pdf_summarizer.main:train"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
